--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -115,12 +115,18 @@
 }
 
 
-.cart-icon:hover {
-  background-color: #935eff;
+.profile-icon {
+  padding: 10px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  transition: background 0.3s;
 }
 
-.cart-icon svg {
-  margin-right: 8px;
+.profile-icon:hover {
+  background-color: #935eff;
 }
 
 .cart-count {
